[package]
name = "lanscan"
version = "1.0.0"
edition = "2021"
description = "LAN network scanner — discovers devices via ARP, optionally scans TCP/UDP ports"
license = "MIT"
repository = "https://github.com/goastler/lan-scan"
readme = "README.md"
keywords = ["network", "scanner", "arp", "lan"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "lan"
path = "src/main.rs"

[dependencies]
pnet        = "0.35"
ipnetwork   = "0.20"
dns-lookup  = "3"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
