[package]
name = "lanscan"
version = "1.0.8"
edition = "2021"
description = "LAN network scanner — discovers devices via ARP, optionally scans TCP/UDP ports"
license = "AGPL-3.0-only"
repository = "https://github.com/goastler/lanscan"
readme = "README.md"
keywords = ["network", "scanner", "arp", "lan"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "lan"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "George Oastler <goastler4@gmail.com>"
section = "net"
depends = ""

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/lan", dest = "/usr/bin/lan", mode = "0755" },
]

[dependencies]
pnet        = "0.35"
ipnetwork   = "0.20"
dns-lookup  = "3"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
